--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "testando" "\0"
+            VALUE "FileDescription", "testando_a_task" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "testando" "\0"
+            VALUE "InternalName", "testando_a_task" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2022 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "testando.exe" "\0"
-            VALUE "ProductName", "testando" "\0"
+            VALUE "OriginalFilename", "testando_a_task.exe" "\0"
+            VALUE "ProductName", "testando_a_task" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
